WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71320
REGRESSION: -webkit-flex() should be an invalid value
https://bugs.webkit.org/show_bug.cgi?id=71320
Summary
REGRESSION: -webkit-flex() should be an invalid value
Tony Chang
Reported
2011-11-01 14:17:27 PDT
REGRESSION: -webkit-flex() should be an invalid value
Attachments
Patch
(1.56 KB, patch)
2011-11-01 14:19 PDT
,
Tony Chang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tony Chang
Comment 1
2011-11-01 14:19:03 PDT
Created
attachment 113217
[details]
Patch
WebKit Review Bot
Comment 2
2011-11-01 16:59:13 PDT
Comment on
attachment 113217
[details]
Patch Clearing flags on attachment: 113217 Committed
r99013
: <
http://trac.webkit.org/changeset/99013
>
WebKit Review Bot
Comment 3
2011-11-01 16:59:17 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug