REGRESSION: -webkit-flex() should be an invalid value https://bugs.webkit.org/show_bug.cgi?id=71320

Reviewed by Ojan Vafai.

This regressed in http://trac.webkit.org/changeset/98773 .

No new tests, covered by css3/flexbox/flex-parsing.html.

* css/CSSParser.cpp:
(WebCore::CSSParser::parseFlex):


git-svn-id: svn://svn.chromium.org/blink/trunk@99013 bbb929c8-8fbe-4397-9dbb-9b2b20218538